@@ -41,25 +41,25 @@
 				<int key="NSvFlags">256</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="NSButton" id="331240386">
+					<object class="NSButton" id="652375187">
 						<reference key="NSNextResponder" ref="443671666"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{263, 118}, {89, 18}}</string>
+						<string key="NSFrame">{{263, 122}, {166, 18}}</string>
 						<reference key="NSSuperview" ref="443671666"/>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSButtonCell" key="NSCell" id="190551319">
+						<object class="NSButtonCell" key="NSCell" id="832645416">
 							<int key="NSCellFlags">67239424</int>
 							<int key="NSCellFlags2">0</int>
-							<string key="NSContents">Lazy Mode</string>
+							<string key="NSContents">SSL check</string>
 							<object class="NSFont" key="NSSupport" id="691464604">
 								<string key="NSName">LucidaGrande</string>
 								<double key="NSSize">13</double>
 								<int key="NSfFlags">1044</int>
 							</object>
-							<reference key="NSControlView" ref="331240386"/>
+							<reference key="NSControlView" ref="652375187"/>
 							<int key="NSButtonFlags">1211912703</int>
 							<int key="NSButtonFlags2">2</int>
-							<object class="NSCustomResource" key="NSNormalImage" id="482449793">
+							<object class="NSCustomResource" key="NSNormalImage" id="128986552">
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">NSSwitch</string>
 							</object>
@@ -72,10 +72,32 @@
 							<int key="NSPeriodicInterval">25</int>
 						</object>
 					</object>
+					<object class="NSButton" id="331240386">
+						<reference key="NSNextResponder" ref="443671666"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{263, 147}, {89, 18}}</string>
+						<reference key="NSSuperview" ref="443671666"/>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSButtonCell" key="NSCell" id="190551319">
+							<int key="NSCellFlags">67239424</int>
+							<int key="NSCellFlags2">0</int>
+							<string key="NSContents">Lazy Mode</string>
+							<reference key="NSSupport" ref="691464604"/>
+							<reference key="NSControlView" ref="331240386"/>
+							<int key="NSButtonFlags">1211912703</int>
+							<int key="NSButtonFlags2">2</int>
+							<reference key="NSNormalImage" ref="128986552"/>
+							<reference key="NSAlternateImage" ref="344584947"/>
+							<string key="NSAlternateContents"/>
+							<string key="NSKeyEquivalent"/>
+							<int key="NSPeriodicDelay">200</int>
+							<int key="NSPeriodicInterval">25</int>
+						</object>
+					</object>
 					<object class="NSButton" id="319674394">
 						<reference key="NSNextResponder" ref="443671666"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{263, 153}, {201, 26}}</string>
+						<string key="NSFrame">{{263, 167}, {201, 26}}</string>
 						<reference key="NSSuperview" ref="443671666"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="680210794">
@@ -86,7 +108,7 @@
 							<reference key="NSControlView" ref="319674394"/>
 							<int key="NSButtonFlags">1211912703</int>
 							<int key="NSButtonFlags2">2</int>
-							<reference key="NSNormalImage" ref="482449793"/>
+							<reference key="NSNormalImage" ref="128986552"/>
 							<reference key="NSAlternateImage" ref="344584947"/>
 							<string key="NSAlternateContents"/>
 							<string key="NSKeyEquivalent"/>
@@ -386,7 +408,7 @@
 							<reference key="NSControlView" ref="863583811"/>
 							<int key="NSButtonFlags">1211912703</int>
 							<int key="NSButtonFlags2">2</int>
-							<reference key="NSNormalImage" ref="482449793"/>
+							<reference key="NSNormalImage" ref="128986552"/>
 							<reference key="NSAlternateImage" ref="344584947"/>
 							<string key="NSAlternateContents"/>
 							<string key="NSKeyEquivalent"/>
@@ -516,6 +538,14 @@
 					</object>
 					<int key="connectionID">102</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">ssl</string>
+						<reference key="source" ref="439491322"/>
+						<reference key="destination" ref="652375187"/>
+					</object>
+					<int key="connectionID">105</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -564,8 +594,9 @@
 							<reference ref="593675993"/>
 							<reference ref="592223138"/>
 							<reference ref="863583811"/>
-							<reference ref="331240386"/>
 							<reference ref="319674394"/>
+							<reference ref="331240386"/>
+							<reference ref="652375187"/>
 						</object>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">View</string>
@@ -816,6 +847,20 @@
 						<reference key="object" ref="190551319"/>
 						<reference key="parent" ref="331240386"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">103</int>
+						<reference key="object" ref="652375187"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="832645416"/>
+						</object>
+						<reference key="parent" ref="443671666"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">104</int>
+						<reference key="object" ref="832645416"/>
+						<reference key="parent" ref="652375187"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -827,6 +872,9 @@
 					<string>100.IBPluginDependency</string>
 					<string>100.IBViewBoundsToFrameTransform</string>
 					<string>101.IBPluginDependency</string>
+					<string>103.IBPluginDependency</string>
+					<string>103.IBViewBoundsToFrameTransform</string>
+					<string>104.IBPluginDependency</string>
 					<string>13.IBPluginDependency</string>
 					<string>13.ImportedFromIB2</string>
 					<string>14.IBPluginDependency</string>
@@ -878,7 +926,12 @@
 					<boolean value="YES"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAABDg4AAww4AAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAABDg4AAwxUAAA</bytes>
+					</object>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<object class="NSAffineTransform">
+						<bytes key="NSTransformStruct">P4AAAL+AAABDg4AAwwoAAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -934,7 +987,7 @@
 					<boolean value="YES"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAABDg4AAwywAAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAABDg4AAwzEAAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 				</object>
@@ -955,7 +1008,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">102</int>
+			<int key="maxID">105</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1056,6 +1109,7 @@
 							<string>logfile</string>
 							<string>protocolist</string>
 							<string>server</string>
+							<string>ssl</string>
 							<string>tag</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -1067,6 +1121,7 @@
 							<string>NSTextField</string>
 							<string>NSPopUpButton</string>
 							<string>NSTextField</string>
+							<string>NSButton</string>
 							<string>NSTextField</string>
 						</object>
 					</object>
@@ -1081,6 +1136,7 @@
 							<string>logfile</string>
 							<string>protocolist</string>
 							<string>server</string>
+							<string>ssl</string>
 							<string>tag</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -1112,6 +1168,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">server</string>
 								<string key="candidateClassName">NSTextField</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">ssl</string>
+								<string key="candidateClassName">NSButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">tag</string>
